syntax = "proto3";
package protocol;

option optimize_for = SPEED;
option go_package = "kon.nect.sh/specter/spec/protocol";

import "spec/proto/node.proto";
import "google/protobuf/descriptor.proto";

message Tunnel {
    Node client = 1;
    Node chord = 2;
    Node tun = 3;

    string hostname = 10;
}

enum TunnelRPC {
    UNKNOWN_RPC = 0;

    IDENTITY = 1;
    NODES = 2;
    HOSTNAME = 3;
    TUNNEL = 4;
    PING = 5;
}

message ClientToken {
    bytes token = 1;
}

message ClientRequest {
    ClientToken token = 1;
    TunnelRPC kind = 2;

    RegisterIdentityRequest registerRequest = 5;
    GetNodesRequest nodesRequest = 6;
    GenerateHostnameRequest hostnameRequest = 7;
    PublishTunnelRequest tunnelRequest = 8;
}

message ClientResponse {
    RegisterIdentityResponse registerResponse = 5;
    GetNodesResponse nodesResponse = 6;
    GenerateHostnameResponse hostnameResponse = 7;
    PublishTunnelResponse tunnelResponse = 8;

    ClientPingResponse pingResponse = 15;
}

message ClientPingResponse {
    Node node = 1;
    string apex = 2;
}

message RegisterIdentityRequest {
    Node client = 1;
}

message RegisterIdentityResponse {
    ClientToken token = 1;
    string apex = 2;
}

message GetNodesRequest {}

message GetNodesResponse {
    repeated Node nodes = 1;
}

message GenerateHostnameRequest {}

message GenerateHostnameResponse {
    string hostname = 1;
}

message PublishTunnelRequest {
    string hostname = 1;
    // servers are tun identities
    repeated Node servers = 2;
}

message PublishTunnelResponse {}

extend google.protobuf.EnumValueOptions {
  string alpn_name = 54242;
}

message Link {
    enum ALPN {
        UNKNOWN = 0;
        SPECTER_CHORD = 1 [(alpn_name) = "specter-chord/1"];
        SPECTER_TUN = 2 [(alpn_name) = "specter-tun/1"];

        HTTP2 = 9 [(alpn_name) = "h2"];
        HTTP = 10 [(alpn_name) = "http/1.1"];
        TCP = 11 [(alpn_name) = "specter-tcp/1"];
    }

    ALPN alpn = 1;
    string hostname = 2;
}

message IdentitiesPair {
    Node chord = 1;
    Node tun = 2;
}